--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.25.1)
 project(RCube)
 
+add_subdirectory(doctest)
+
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
@@ -22,3 +24,9 @@ find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 
 target_link_libraries(RCube PRIVATE OpenGL::GL OpenGL::GLU GLUT::GLUT)
+
+add_executable(RCube-tests RCube/test_cube.cpp RCube/visual_cube.cpp)
+target_link_libraries(RCube-tests doctest)
+
+enable_testing()
+add_test(NAME RCube-tests COMMAND RCube-tests --force-colors -d)
