тоже надо будет менять, старый

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ add_executable(RCube
         RCube/main.cpp
         RCube/rotations.cpp
         RCube/solver.cpp
-        RCube/visual_cube.cpp)
+        RCube/visual_cube.cpp
+        RCubeTests/MockCube.h)
 
 add_custom_command(TARGET RCube POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
@@ -26,14 +27,21 @@ find_package(GLUT REQUIRED)
 target_link_libraries(RCube PRIVATE OpenGL::GL OpenGL::GLU GLUT::GLUT)
 
 add_executable(RCube-tests
-        RCube/test_cube.cpp
+        RCubeTests/test_cube.cpp
         RCube/cube_realization.cpp
         RCube/rotations.cpp
         RCube/solver.cpp
-        RCube/visual_cube.cpp)
+        RCube/visual_cube.cpp
+        RCubeTests/MockCube.h)
+
+find_package(GTest REQUIRED)
+
+include_directories(googletest/googletest/include)
+include_directories(googletest/googlemock/include)
 
 target_link_libraries(RCube-tests doctest)
 target_link_libraries(RCube-tests OpenGL::GL OpenGL::GLU GLUT::GLUT)
+target_link_libraries(RCube-tests gmock gtest pthread)
 
 enable_testing()
 add_test(NAME RCube-tests COMMAND RCube-tests --force-colors -d)
